# GameScript

./: .gitignore  .travis.yml  CMakeLists.txt  COMPILE  COPYRIGHT  GameScript-config.cmake.in  GameScript.dsw  GameScript.pc.in  HISTORY  Makefile  README.md  appveyor.yml  build.bat
GS/: CMakeLists.txt  GS.c  GS.dsp  Makefile
GameScript/: CMakeLists.txt  GSapi.cpp  GSarray.h  GSbaselib.cpp  GSclass.cpp  GSclass.h  GSclosure.h  GScompiler.cpp  GScompiler.h  GSdebug.cpp  GSfuncproto.h  GSfuncstate.cpp  GSfuncstate.h  GSlexer.cpp  GSlexer.h  GSmem.cpp  GSobject.cpp  GSobject.h  GSopcodes.h  GSpcheader.h  GSstate.cpp  GSstate.h  GSstring.h  GStable.cpp  GStable.h  GSuserdata.h  GSutils.h  GSvm.cpp  GSvm.h  GameScript.dsp  Makefile  version.h
etc/: minimal.c  test.gs
gstdlib/: CMakeLists.txt  Makefile  gstdaux.cpp  gstdblob.cpp  gstdblobimpl.h  gstdio.cpp  gstdlib.dsp  gstdmath.cpp  gstdrex.cpp  gstdstream.cpp  gstdstream.h  gstdstring.cpp  gstdsystem.cpp
include/: GSconfig.h  GameScript.h  gstdaux.h  gstdblob.h  gstdio.h  gstdmath.h  gstdstring.h  gstdsystem.h
samples/: ackermann.gs  array.nut  class.nut  classattributes.gs  coroutines.gs  delegation.nut  fibonacci.nut  flow.gs  generators.gs  list.nut  loops.gs  matrix.nut  metamethods.gs  methcall.nut  regex.gs  tailstate.nut
tests/import/: main.gs
tests/import/math/: utils.gs
